--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -8,8 +8,8 @@
     left: 0;
     top: 0;
     height: 100vh;
-
-    border-right: 1px solid var(--color-gray-dark);
+    padding-right: var(--padding);
+    // border-right: 1px solid var(--color-gray-dark);
 
     z-index: 90;
 }
@@ -68,18 +68,26 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+
+    // padding: var(--padding);
+    // background-color: var(--color-background-card);
+    // height: fit-content;
+    // border-radius: 1rem;
 }
 
 .header__description__content {
+    color: var(--color-secondary);
+    color: #fff;
     a {
         color: var(--color-secondary);
+        color: #fff;
 
         &:hover {
             color: var(--color-link-hover);
         }
     }
 
-    color: var(--color-secondary);
 }
 
 .header__description__avatar {
@@ -121,11 +129,37 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px 20px;
+    // gap: 1rem 1.5rem;
+    gap: .5rem;
     border-top: 1px solid var(--color-gray-dark);
     padding: 1.5rem 1rem;
-    li{
+
+    li {
         list-style: none;
+    }
+
+    a {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: row;
+        gap: 0.62rem;
+
+        border-radius: 0.62rem;
+        padding: 0.62rem;
+        background: var(--color-background-card);
+        background: #ffffff1a;
+
+
+        text-decoration: none;
+
+        width: fit-content;
+
+        &:hover {
+            color: #fff;
+            background: #c8d0db4c;
+
+        }
     }
 }
 
@@ -147,6 +181,13 @@
     border-top: 1px solid var(--color-gray-dark);
 }
 
+// @media screen and (max-width: 1600px) {
+//     .header__wrapper {
+//         grid-column: 1/4;
+
+//     }
+// }
+
 @media screen and (max-width: 1220px) {
     .header__wrapper {
         grid-column: 1/5;
@@ -160,6 +201,7 @@
         height: fit-content;
         border: none;
         border-bottom: 1px solid var(--color-gray-dark);
+        padding: 0;
     }
 
     .header__top {
@@ -167,7 +209,7 @@
         height: 54px;
         position: fixed;
         border-bottom: 0;
-        background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, #000 100%);
+        background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, #0F0F0F 100%);
     }
 
     .header__description {
