--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -8,13 +8,13 @@
     left: 0;
     top: 0;
     height: 100vh;
-    padding-right: var(--padding);
-    // border-right: 1px solid var(--color-gray-dark);
-
+    // padding-right: var(--padding);
+    
     z-index: 90;
 }
 
 .header {
+    border-right: 1px solid var(--color-gray-dark);
     width: 100%;
     // display: grid;
     // grid-template-columns: repeat(12, 1fr);
@@ -41,6 +41,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem 1rem;
+    padding: 1.5rem var(--padding);
     border-bottom: 1px solid var(--color-gray-dark);
     position: sticky;
     top: 0;
@@ -63,6 +64,7 @@
 
 .header__description {
     padding: 1.5rem 1rem;
+    padding: 1.5rem var(--padding);
 
     height: 100%;
     display: flex;
@@ -133,6 +135,7 @@
     gap: .5rem;
     border-top: 1px solid var(--color-gray-dark);
     padding: 1.5rem 1rem;
+    padding: 1.5rem var(--padding);
 
     li {
         list-style: none;
@@ -170,6 +173,7 @@
 
 .header__bottom__year {
     padding: 1.5rem 1rem;
+    padding: 1.5rem var(--padding);
 
     color: var(--color-secondary);
     font-size: var(--font-size--1);
