--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -26,11 +26,11 @@
     position: relative;
     z-index: 10;
     // padding: 20px;
-    padding: var(--padding);
+    padding: 0 0 0 var(--padding);
     gap: 2rem;
-    background-color: var(--color-background-card);
+    // background-color: var(--color-background-card);
     height: fit-content;
-    border-radius: 1rem;
+    // border-radius: 1rem;
 }
 
 .post-card__big__content {
@@ -162,7 +162,8 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    a{
+
+    a {
         width: 100%;
     }
 }
@@ -284,11 +285,11 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        padding: 0;
         height: fit-content;
         position: relative;
         // gap: 1rem;
         gap: 0;
+        padding: 0 var(--padding);
 
         .f-carousel__dots {
             left: 0 !important;
@@ -310,7 +311,7 @@
     .post-card__big__content__wrapper {
         // padding: 20px;
         // margin: 0 1rem;
-        padding: var(--padding);
+        padding: var(--padding) 0;
         gap: 2rem;
     }
 
@@ -329,6 +330,7 @@
 
         .f-carousel {
             // height: 100%;
+
         }
 
         .f-carousel__dots {
@@ -339,6 +341,23 @@
 
     .post-card__big__gallery__background {
         padding: 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .post-card__big {
+        padding: 0;
+
+    }
+
+    .post-card__big__content__wrapper {
+        padding: var(--padding);
+    }
+
+    .post-card__big__gallery {
+        .f-carousel {
+            border-radius: 0;
+        }
     }
 }
 
