--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -100,25 +100,25 @@
 }
 
 .header__description__avatar__source {
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
+    width: 45px;
+    height: 45px;
+    border-radius: 45px;
     object-fit: cover;
 }
 
 .header__description__avatar__title {
     display: flex;
     flex-direction: column;
-    gap: 3px;
-
+    gap: .3rem;
 }
 
 .header__description__avatar__title_name {
-    // font-size: var(--font-size-0);
+    font-size: var(--font-size-1);
+    font-weight: var(--font-weight-medium);
 }
 
 .header__description__avatar__title_caption {
-    font-size: var(--font-size--1);
+    font-size: var(--font-size-0);
     color: var(--color-secondary);
 }
 
