--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,6 @@
     --font-weight-medium: 500;
     --font-weight-bold: 700;
 
-    // --color-primary: #1D1D1D;
     --color-primary: #000;
     // --color-primary: #0F0F0F;
     --color-secondary: #999999;
@@ -283,6 +282,40 @@ body {
     grid-column: 4/13;
     padding: 0 1rem;
     // overflow-x: hidden;
+    // transition-property: opacity, left;
+    // transition-duration: 3s, 5s, 2s, 1s;
+    transition-property: all;
+    transition-duration: .5s;
+    position: relative;
+
+    &::before {
+
+        content: '';
+        position: absolute;
+        display: inline-block;
+        z-index: 10;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(0 0 0 / 65%);
+        transition-property: all;
+        transition-duration: .5s;
+
+        visibility: hidden;
+        opacity: 0;
+    }
+
+    &._open {
+        transform: scale(.9);
+        filter: blur(5px);
+        touch-action: none;
+
+        &::before {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
 }
 
 // Buttons
@@ -319,7 +352,7 @@ body {
         grid-column: 5/13;
         padding: 0;
     }
-    
+
 }
 
 @media screen and (max-width: 767px) {
