--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -8,17 +8,13 @@
     left: 0;
     top: 0;
     height: 100vh;
-    // padding-right: var(--padding);
-    
+    padding-right: var(--padding);
     z-index: 90;
 }
 
 .header {
     border-right: 1px solid var(--color-gray-dark);
     width: 100%;
-    // display: grid;
-    // grid-template-columns: repeat(12, 1fr);
-    // gap: var(--grid-gap);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -27,12 +23,6 @@
 
     // background-color: rgb(0 0 0 / 58%);
     // backdrop-filter: blur(var(--backdrop-filter-card));
-    .header__links_social {
-        grid-column: 9 / 13;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-    }
 }
 
 .header__top {
@@ -47,6 +37,7 @@
     top: 0;
     // background-color: var(--color-primary);
     width: 100%;
+    z-index: 90;
 }
 
 .header__top__logo {
@@ -61,6 +52,30 @@
 .header__top__burger {
     cursor: pointer;
 }
+
+.header__burger__menu {
+    position: fixed;
+    transform: translateY(-100%);
+    width: 100%;
+    height: 70vh;
+    background-color: var(--color-primary);
+    left: 0;
+    top: 0;
+
+    border-bottom: 1px solid var(--color-gray-dark);
+    // transition: all .5s;
+    transition: transform .5s;
+    z-index: 80;
+    &._open {
+        transform: translateY(0%);
+
+        @media screen and (max-width:767px) {
+            top: 54px;
+        }
+    }
+
+}
+
 
 .header__description {
     padding: 1.5rem 1rem;
@@ -78,9 +93,49 @@
     // border-radius: 1rem;
 }
 
+.header__description__links {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    // gap: 1rem 1.5rem;
+    gap: .5rem;
+    // border-top: 1px solid var(--color-gray-dark);
+    padding: .5rem 0;
+
+    li {
+        list-style: none;
+    }
+
+    a {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        flex-direction: row;
+        gap: 0.62rem;
+
+        border-radius: 0.62rem;
+        padding: 0.62rem;
+        background: var(--color-background-card);
+        background: #ffffff1a;
+
+
+        text-decoration: none;
+
+        width: fit-content;
+
+        &:hover {
+            color: #fff;
+            background: #c8d0db4c;
+
+        }
+    }
+}
+
 .header__description__content {
     color: var(--color-secondary);
     color: #fff;
+
+
     a {
         color: var(--color-secondary);
         color: #fff;
