--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -1,3 +1,65 @@
+.header__top__burger {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    width: 21px;
+    height: 21px;
+    cursor: pointer;
+  }
+  
+  .bar,
+  .bar:after,
+  .bar:before {
+    width: 21px;
+    height: 2.5px;
+  }
+  
+  .bar {
+    position: relative;
+    transform: translateY(7px);
+    background: white;
+    transition: all 0ms 200ms;
+  }
+  .bar.animate {
+    background: rgba(255, 255, 255, 0);
+  }
+  
+  .bar:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 6px;
+    background: white;
+    transition: bottom 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .bar:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 6px;
+    background: white;
+    transition: top 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .bar.animate:after {
+    top: 0;
+    transform: rotate(45deg);
+    transition: top 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .bar.animate:before {
+    bottom: 0;
+    transform: rotate(-45deg);
+    transition: bottom 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+
+
+
 .header__wrapper {
     width: 100%;
     top: 0;
@@ -49,9 +111,7 @@
     }
 }
 
-.header__top__burger {
-    cursor: pointer;
-}
+
 
 .header__burger__menu {
     position: fixed;
@@ -66,11 +126,13 @@
     // transition: all .5s;
     transition: transform .5s;
     z-index: 80;
+
+    box-shadow: 0px 15px 30px 0px #000000b3;
     &._open {
         transform: translateY(0%);
 
         @media screen and (max-width:767px) {
-            top: 54px;
+            // top: 54px;
         }
     }
 
