--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300,400;500;700&display=swap');
 
 :root {
     --font-family-primary: 'Roboto', sans-serif;
@@ -126,7 +126,7 @@ a,
 li {
     font-weight: 400;
     font-size: var(--font-size-0);
-    line-height: 110%;
+    line-height: 115%;
 }
 
 div {
@@ -324,9 +324,8 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    gap: 0.62rem;
 
-    border-radius: 0.62rem;
+    // border-radius: 0.62rem;
     padding: 0.62rem;
     background: var(--color-background-card);
     background: #ffffff1a;
@@ -336,6 +335,80 @@ body {
 
     width: fit-content;
 
+
+    // background-color: rgba(255, 255, 255, 0.1);
+    // background-image: linear-gradient(rgb(255, 255, 255) 5vw, transparent 5vw, transparent 15vw, rgb(255, 254, 254) 15vw),
+    //     linear-gradient(90deg, rgb(255, 255, 255) 5vw, transparent 5vw, transparent 15vw, rgb(255, 255, 255) 15vw),
+    //     linear-gradient(rgb(255, 255, 255) 5vw, transparent 5vw, transparent 15vw, rgb(255, 255, 255) 15vw),
+    //     linear-gradient(90deg, rgb(255, 255, 255) 5vw, transparent 5vw, transparent 15vw, rgb(255, 255, 255) 15vw);
+    // background-size: 1px 20vw, 20vw 1px, 1px 20vw, 20vw 1px;
+    // background-position: 0 0, 0 0, 100% 100%, 100% 100%;
+    // background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+
+    position: relative;
+    z-index: 1;
+
+    &._border {
+
+        &::before {
+            display: block;
+            content: '';
+            position: absolute;
+            border: 1px solid #fff;
+            border-right-color: transparent;
+            border-bottom-color: transparent;
+            width: 1rem;
+            height: 1rem;
+            top: 0;
+            left: 0;
+            z-index: 2;
+        }
+
+        // &::after {
+        //     display: block;
+        //     content: '';
+        //     position: absolute;
+        //     border: 1px solid #fff;
+        //     border-left-color: transparent;
+        //     border-bottom-color: transparent;
+        //     width: 1rem;
+        //     height: 1rem;
+        //     top: 0;
+        //     right: 0;
+        //     z-index: 2;
+        // }
+
+        .link-button__border {
+            // &::before {
+            //     display: block;
+            //     content: '';
+            //     position: absolute;
+            //     border: 1px solid #fff;
+            //     border-right-color: transparent;
+            //     border-top-color: transparent;
+            //     width: 1rem;
+            //     height: 1rem;
+            //     bottom: 0;
+            //     left: 0;
+            //     z-index: 2;
+            // }
+
+            &::after {
+                display: block;
+                content: '';
+                position: absolute;
+                border: 1px solid #fff;
+                border-left-color: transparent;
+                border-top-color: transparent;
+                width: 1rem;
+                height: 1rem;
+                bottom: 0;
+                right: 0;
+                z-index: 2;
+            }
+        }
+    }
+
     &._big {
         padding: 1rem 0.62rem;
     }
@@ -343,7 +416,6 @@ body {
     &:hover {
         color: #fff;
         background: #c8d0db4c;
-
     }
 }
 
