--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -1,13 +1,27 @@
-footer {
+.footer {
+
     grid-column: 4/13;
     // overflow-x: hidden;
     margin-top: 5rem;
     border-top: 1px solid var(--color-gray-dark);
-}
+    padding: 0 1rem;
 
-.footer {
     display: flex;
     flex-direction: column;
+    transition-property: all;
+    transition-duration: .5s;
+    position: relative;
+
+    &._hide {
+        transform: translateY(-30%) scale(0.9);
+        filter: blur(5px);
+        touch-action: none;
+
+    }
+
+    .header__bottom {
+        display: none;
+    }
 }
 
 .footer__links {
@@ -41,7 +55,19 @@ footer {
 }
 
 @media screen and (max-width: 1220px) {
-    footer {
+    .footer {
         grid-column: 5/13;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .footer {
+        grid-column: 5/13;
+
+        // padding-bottom: 4rem;
+        .header__bottom {
+            display: flex;
+        }
     }
 }
