--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -1,65 +1,3 @@
-.header__top__burger {
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-    width: 21px;
-    height: 21px;
-    cursor: pointer;
-  }
-  
-  .bar,
-  .bar:after,
-  .bar:before {
-    width: 21px;
-    height: 2.5px;
-  }
-  
-  .bar {
-    position: relative;
-    transform: translateY(7px);
-    background: white;
-    transition: all 0ms 200ms;
-  }
-  .bar.animate {
-    background: rgba(255, 255, 255, 0);
-  }
-  
-  .bar:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 6px;
-    background: white;
-    transition: bottom 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  
-  .bar:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 6px;
-    background: white;
-    transition: top 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  
-  .bar.animate:after {
-    top: 0;
-    transform: rotate(45deg);
-    transition: top 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  
-  .bar.animate:before {
-    bottom: 0;
-    transform: rotate(-45deg);
-    transition: bottom 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  
-
-
-
 .header__wrapper {
     width: 100%;
     top: 0;
@@ -70,7 +8,7 @@
     left: 0;
     top: 0;
     height: 100vh;
-    padding-right: var(--padding);
+    // padding-right: var(--padding);
     z-index: 90;
 }
 
@@ -117,17 +55,18 @@
     position: fixed;
     transform: translateY(-100%);
     width: 100%;
-    height: 70vh;
+    // height: 70vh;
+    height: fit-content;
     background-color: var(--color-primary);
     left: 0;
     top: 0;
 
     border-bottom: 1px solid var(--color-gray-dark);
-    // transition: all .5s;
     transition: transform .5s;
     z-index: 80;
 
     box-shadow: 0px 15px 30px 0px #000000b3;
+
     &._open {
         transform: translateY(0%);
 
@@ -136,8 +75,93 @@
         }
     }
 
+    .header__burger__links {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        li {
+            list-style: none;
+            width: 100%;
+        }
+
+        a {
+            display: inline-block;
+            width: 100%;
+            padding: var(--padding);
+            color: #fff;
+            text-decoration: none;
+            font-size: var(--font-size-4);
+            font-weight: var(--font-weight-regular);
+            transition: all .1s;
+
+            &:hover {
+                background-color: #fff;
+                color: #000;
+            }
+        }
+    }
 }
 
+.header__top__burger {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    width: 21px;
+    height: 21px;
+    cursor: pointer;
+}
+
+.bar,
+.bar:after,
+.bar:before {
+    width: 21px;
+    height: 2.5px;
+}
+
+.bar {
+    position: relative;
+    transform: translateY(10px);
+    background: white;
+    transition: all 0ms 200ms;
+}
+
+.bar.animate {
+    background: rgba(255, 255, 255, 0);
+}
+
+.bar:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 6px;
+    background: white;
+    transition: bottom 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.bar:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 6px;
+    background: white;
+    transition: top 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.bar.animate:after {
+    top: 0;
+    transform: rotate(45deg);
+    transition: top 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.bar.animate:before {
+    bottom: 0;
+    transform: rotate(-45deg);
+    transition: bottom 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+}
 
 .header__description {
     padding: 1.5rem 1rem;
@@ -162,34 +186,40 @@
     // gap: 1rem 1.5rem;
     gap: .5rem;
     // border-top: 1px solid var(--color-gray-dark);
-    padding: .5rem 0;
+
+
+
+    display: flex;
+    flex-direction: column;
+    gap: .7rem;
+    padding: 2rem 0;
 
     li {
         list-style: none;
     }
 
     a {
-        display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
-        flex-direction: row;
-        gap: 0.62rem;
+        // display: flex;
+        // align-items: flex-start;
+        // justify-content: flex-start;
+        // flex-direction: row;
+        // gap: 0.62rem;
 
-        border-radius: 0.62rem;
-        padding: 0.62rem;
-        background: var(--color-background-card);
-        background: #ffffff1a;
+        // border-radius: 0.62rem;
+        // padding: 0.62rem;
+        // background: var(--color-background-card);
+        // background: #ffffff1a;
 
 
-        text-decoration: none;
+        // text-decoration: none;
 
-        width: fit-content;
+        // width: fit-content;
 
-        &:hover {
-            color: #fff;
-            background: #c8d0db4c;
+        // &:hover {
+        //     color: #fff;
+        //     background: #c8d0db4c;
 
-        }
+        // }
     }
 }
 
@@ -226,7 +256,7 @@
 .header__description__avatar__title {
     display: flex;
     flex-direction: column;
-    gap: .3rem;
+    gap: .1rem;
 }
 
 .header__description__avatar__title_name {
@@ -317,11 +347,11 @@
 }
 
 @media screen and (max-width: 767px) {
+
     .header__wrapper {
         position: relative;
         height: fit-content;
         border: none;
-        border-bottom: 1px solid var(--color-gray-dark);
         padding: 0;
     }
 
@@ -333,10 +363,24 @@
         background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, #0F0F0F 100%);
     }
 
+    .header__burger__menu {
+        padding-top: 3rem;
+    }
+
     .header__description {
         margin-top: 54px;
         padding: var(--padding);
         border-top: 1px solid var(--color-gray-dark);
+        border-bottom: 1px solid var(--color-gray-dark);
+
+        transition-property: all;
+        transition-duration: .5s;
+
+        &._hide {
+            transform: translateY(10%) scale(0.9);
+            filter: blur(5px);
+            touch-action: none;
+        }
     }
 
     .header__bottom__links {
@@ -348,7 +392,11 @@
     }
 
     .header {
+
         // padding-bottom: 4rem;
+        .header__bottom {
+            display: none;
+        }
     }
 
 }
