--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -31,6 +31,7 @@
     // gap: 1rem;
     // background-color: var(--color-background-card);
     height: fit-content;
+    height: 100%;
     // border-radius: 1rem;
 }
 
@@ -201,20 +202,16 @@
 }
 
 .post-card__big__gallery {
-    // padding: var(--padding) 0 var(--padding) var(--padding);
     padding: 0 0 0 var(--padding);
 
     position: relative;
     width: 100%;
     height: 100%;
-    // max-height: calc(100vh - 190px);
-    // max-height: calc(100vh - 350px);
     grid-column: 1 / 9;
     z-index: 5;
 
     .f-carousel {
-        // height: 100%;
-        border-radius: 1rem;
+        // border-radius: 1rem;
         overflow: hidden;
     }
 
