--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -211,7 +211,7 @@
     z-index: 5;
 
     .f-carousel {
-        // border-radius: 1rem;
+        border-radius: 1rem;
         overflow: hidden;
     }
 
