--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -15,6 +15,7 @@
     &._hide {
         transform: translateY(-30%) scale(0.9);
         filter: blur(5px);
+        opacity: .7;
         touch-action: none;
 
     }
@@ -45,7 +46,7 @@
 
 .footer__decor {
     width: 100%;
-    padding: var(--padding);
+    padding: calc(2 * (var(--padding))) var(--padding);
 
     svg {
         width: 100%;
@@ -62,12 +63,16 @@
 }
 
 @media screen and (max-width: 767px) {
+    .footer__decor {
+        padding: calc(1.5 * (var(--padding))) var(--padding);
+    }
+    
     .footer {
         grid-column: 5/13;
 
-        // padding-bottom: 4rem;
         .header__bottom {
             display: flex;
+            border-bottom: 1px solid var(--color-gray-dark);
         }
     }
 }
