--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300,400;500;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300,400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 :root {
-    --font-family-primary: 'Roboto', sans-serif;
+    // --font-family-primary: 'Roboto', sans-serif;
+    --font-family-primary: "Inter", sans-serif;
     --font-weight-regular: 400;
     --font-weight-medium: 500;
     --font-weight-bold: 700;
 
     --color-primary: #000;
-    --color-primary: #0F0F0F;
+    // --color-primary: #0F0F0F;
     --color-secondary: #999999;
     --color-gray-dark: #373737;
     // --color-background-card: rgba(255, 255, 255, 0.1);
@@ -34,7 +36,7 @@
     --grid-column-gap: 30px;
     --grid-row-gap: 30px;
 
-    --padding: clamp(1.5rem, 5vw, 2rem);
+    --padding: clamp(1rem, 5vw, 2rem);
 }
 
 * {
@@ -279,8 +281,8 @@ body {
 /*# sourceMappingURL=scroll.css.map */
 
 #main {
-    grid-column: 4/13;
-    padding: 0 1rem;
+    grid-column: 3/13;
+    // padding: 0 1rem;
     // overflow-x: hidden;
     // transition-property: opacity, left;
     // transition-duration: 3s, 5s, 2s, 1s;
@@ -422,6 +424,13 @@ body {
     }
 }
 
+@media screen and (max-width: 1600px) {
+    #main {
+        grid-column: 4/13;
+    }
+
+}
+
 @media screen and (max-width: 1220px) {
     #main {
         grid-column: 5/13;
@@ -434,5 +443,9 @@ body {
     body.page {
         display: flex;
         flex-direction: column;
+    }
+    #main{
+        margin-top: 54px;
+        border-top: 1px solid var(--color-gray-dark);
     }
 }
