--- a/blocks/section__about-me-main/_index.scss
+++ b/blocks/section__about-me-main/_index.scss
@@ -1,22 +1,102 @@
 .about-me__main-screen {
-    padding: 10rem var(--padding);
-
+    padding: 2.5rem var(--padding);
+    border-top: 1px solid var(--color-gray-dark);
+    margin-top: 10rem;
 }
 
 .about-me__main-screen__title {
-    grid-column: 1/3;
+    grid-column: 1/13;
 }
 
 .about-me__main-screen__description {
-    grid-column: 5/10;
+    grid-column: 1/9;
+    grid-row: 2/3;
+    font-size: var(--font-size-1);
+
+    p {
+        font-size: var(--font-size-1);
+    }
+
+    a {
+        font-size: var(--font-size-1);
+    }
 }
 
 .about-me__main-screen__image {
-    grid-column: 11/13;
+    grid-column: 9/13;
 }
 
 .about-me__main-screen__image__source {
     width: 100%;
     height: auto;
     object-fit: cover;
+    border-radius: 1rem;
+
+}
+
+
+.about-me__main-screen__description__links {
+    // display: flex;
+    // flex-direction: row;
+    // flex-wrap: wrap;
+    // gap: 1rem 1.5rem;
+    // gap: .5rem;
+    // border-top: 1px solid var(--color-gray-dark);
+
+    display: flex;
+    flex-direction: row;
+    // gap: 0.7rem 1rem;
+    gap: 1rem;
+    padding: 2rem 0;
+    flex-wrap: wrap;
+
+    li {
+        list-style: none;
+    }
+
+    a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        padding: 0.6rem 1rem;
+        background: rgba(23, 26, 30, 0.5);
+        background: var(--color-background-card);
+        background: rgba(255, 255, 255, 0.1019607843);
+        text-decoration: none;
+        width: -moz-fit-content;
+        width: fit-content;
+        position: relative;
+        z-index: 1;
+
+        border-radius: 100px;
+
+        &:hover {
+            color: #fff;
+            background: #c8d0db4c;
+        }
+    }
+}
+
+@media screen and (max-width:767px) {
+    
+    .about-me__main-screen {
+        gap: 1rem;
+        margin-top: 3rem;
+    }
+    .about-me__main-screen__title {
+        grid-row: 2/3;
+    }
+
+    .about-me__main-screen__image {
+        grid-column: 1/7;
+        grid-row: 2/3;
+        grid-row: 1/2;
+    }
+
+    .about-me__main-screen__description {
+        grid-column: 1/13;
+        grid-row: 3/4;
+    }
+
 }
