--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -5,6 +5,8 @@
     z-index: 1;
     // overflow: hidden;
     // height: fit-content;
+    border-top: 1px solid var(--color-gray-dark);
+
     .post-card__big {
         &:not(:first-child) {
             padding-top: 3rem;
@@ -25,7 +27,7 @@
 
 .section__post-list__big__heading {
     padding: var(--padding);
-    padding: 1.5rem var(--padding);
+    padding: 2.5rem var(--padding);
 
     display: flex;
     flex-direction: row;
@@ -33,16 +35,11 @@
     z-index: 10;
 }
 
-.section__post-list__big__heading__count {
-    font-weight: 500;
-    font-size: var(--font-size-2);
-    line-height: var(--font-size-2);
-}
-
 @media screen and (max-width: 1220px) {
-    .section__post-list__big{
+    .section__post-list__big {
         gap: 2rem;
     }
+
     .section__post-list__big__wrapper {
         .post-card__big {
             border-bottom: 0;
@@ -58,4 +55,8 @@
 
     }
 
+}
+
+@media screen and (max-width: 767px){
+    
 }
