--- a/blocks/section__welcome-block/_index.scss
+++ b/blocks/section__welcome-block/_index.scss
@@ -1,30 +1,57 @@
 .section__welcome-block {
-    height: calc(100vh - 70px);
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-gap: var(--grid-gap);
-    gap: var(--grid-gap);
-    align-items: end;
-    padding-bottom: 3rem;
-    border-top: 1px solid #999;
-    margin-top: 70px;
+    height: fit-content;
+    min-height: 70vh;
+    padding: var(--padding);
+    display: flex;
+    flex-direction: column;
+    // justify-content: flex-end;
+}
+
+.welcome-block__text {
+    font-size: var(--font-size-5);
+    line-height: 110%;
+    font-weight: var(--font-weight-regular);
+    font-weight: 400;
+
+    a {
+        font-size: var(--font-size-5);
+        line-height: 110%;
+        font-weight: var(--font-weight-regular);
+        font-weight: 400;
+
+    }
 }
 
 .welcome-block__content {
-    grid-column: 5 / 13;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.welcome-block__caption, .welcome-block__caption a {
+.welcome-block__caption,
+.welcome-block__caption a {
     font-size: var(--font-size-2);
     line-height: 110%;
     font-weight: var(--font-weight-regular);
 }
 
+
+
 @media screen and (max-width: 767px) {
+    .section__welcome-block {
+        min-height: 80vh;
+    }
+
     .welcome-block__content {
         grid-column: 1 / 13;
     }
+
+    .welcome-block__text {
+        font-size: var(--font-size-4);
+
+        a {
+            font-size: var(--font-size-4);
+        }
+    }
+
 }
