--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -1,6 +1,6 @@
 .footer {
 
-    grid-column: 4/13;
+    grid-column: 3/13;
     // overflow-x: hidden;
     margin-top: 5rem;
     border-top: 1px solid var(--color-gray-dark);
@@ -55,6 +55,12 @@
     }
 }
 
+@media screen and (max-width: 1600px) {
+    .footer {
+        grid-column: 4/13;
+    }
+}
+
 @media screen and (max-width: 1220px) {
     .footer {
         grid-column: 5/13;
@@ -66,10 +72,10 @@
     .footer__decor {
         padding: calc(1.5 * (var(--padding))) var(--padding);
     }
-    
+
     .footer {
         grid-column: 5/13;
-
+        margin-top: 0;
         .header__bottom {
             display: flex;
             border-bottom: 1px solid var(--color-gray-dark);
