--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,14 +12,16 @@
     // --color-primary: #0F0F0F;
     --color-secondary: #999999;
     --color-gray-dark: #373737;
-    // --color-background-card: rgba(255, 255, 255, 0.1);
+    
+    --color-text-primary: #fff;
+    --color-text-gray: #999999;
+    
     --color-background-card: rgba(23, 26, 30, 0.5);
-    // background: #272727;
-    --color-accent: #f413d9;
+    
     --color-accent: #F430B9;
-    // --color-accent: #F26DB4;
     --color-white: #fff;
     --color-link-hover: var(--color-accent);
+    
     --backdrop-filter-card: 700px;
 
     --font-size--2: clamp(0.64rem, 0.7167rem + -0.099vi, 0.6944rem);
@@ -50,7 +52,7 @@
 ::selection {
     background: var(--color-accent);
     /* Цвет фона */
-    color: #fff;
+    color: var(--color-text-primary);
     /* Цвет текста */
 }
 
@@ -58,7 +60,7 @@ body {}
 
 body.page {
     background-color: var(--color-primary);
-    color: #fff;
+    color: var(--color-text-primary);
     width: 100%;
 
     display: grid;
@@ -75,7 +77,7 @@ body.page {
 }
 
 a {
-    color: #fff;
+    color: var(--color-text-primary);
     opacity: 1;
     transition: all .3s;
 
@@ -280,6 +282,10 @@ body {
 } */
 /*# sourceMappingURL=scroll.css.map */
 
+section {
+    margin: 10rem 0;
+}
+
 #main {
     grid-column: 3/13;
     // padding: 0 1rem;
@@ -330,8 +336,8 @@ body {
     justify-content: center;
     flex-direction: row;
 
-    border-radius: 0.6rem;
-    padding: 0.62rem;
+    // border-radius: 0.6rem;
+    padding: 1rem 1.5rem;
     background: var(--color-background-card);
     background: #ffffff1a;
 
@@ -402,7 +408,7 @@ body {
                 display: block;
                 content: '';
                 position: absolute;
-                border: 1px solid #fff;
+                border: 1px solid var(--color-text-primary);
                 border-left-color: transparent;
                 border-top-color: transparent;
                 width: 1rem;
@@ -419,7 +425,7 @@ body {
     }
 
     &:hover {
-        color: #fff;
+        color: var(--color-text-primary);
         background: #c8d0db4c;
     }
 }
@@ -444,8 +450,9 @@ body {
         display: flex;
         flex-direction: column;
     }
-    #main{
+
+    #main {
         margin-top: 54px;
-        border-top: 1px solid var(--color-gray-dark);
+        // border-top: 1px solid var(--color-gray-dark);
     }
 }
