--- a/blocks/section__about-me-main/_index.scss
+++ b/blocks/section__about-me-main/_index.scss
@@ -1,7 +1,8 @@
 .about-me__main-screen {
     padding: 2.5rem var(--padding);
-    border-top: 1px solid var(--color-gray-dark);
+    // border-top: 1px solid var(--color-gray-dark);
     margin-top: 10rem;
+    gap: 0
 }
 
 .about-me__main-screen__title {
@@ -9,29 +10,26 @@
 }
 
 .about-me__main-screen__description {
-    grid-column: 1/9;
+    grid-column: 1/6;
     grid-row: 2/3;
-    font-size: var(--font-size-1);
-
-    p {
-        font-size: var(--font-size-1);
-    }
-
-    a {
-        font-size: var(--font-size-1);
-    }
+    padding-top: 1rem;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 3rem;
 }
 
 .about-me__main-screen__image {
     grid-column: 9/13;
+    padding-left: var(--padding);
 }
 
 .about-me__main-screen__image__source {
     width: 100%;
     height: auto;
     object-fit: cover;
-    border-radius: 1rem;
-
+    // border-radius: 1rem;
 }
 
 
@@ -47,7 +45,6 @@
     flex-direction: row;
     // gap: 0.7rem 1rem;
     gap: 1rem;
-    padding: 2rem 0;
     flex-wrap: wrap;
 
     li {
@@ -59,44 +56,60 @@
         align-items: center;
         justify-content: center;
         flex-direction: row;
-        padding: 0.6rem 1rem;
-        background: rgba(23, 26, 30, 0.5);
-        background: var(--color-background-card);
-        background: rgba(255, 255, 255, 0.1019607843);
-        text-decoration: none;
-        width: -moz-fit-content;
-        width: fit-content;
-        position: relative;
-        z-index: 1;
+        // padding: 0.6rem 1rem;
+        // background: rgba(23, 26, 30, 0.5);
+        // background: var(--color-background-card);
+        // background: rgba(255, 255, 255, 0.1019607843);
+        // text-decoration: none;
+        // width: -moz-fit-content;
+        // width: fit-content;
+        // position: relative;
+        // z-index: 1;
 
-        border-radius: 100px;
+        // border-radius: 100px;
 
-        &:hover {
-            color: #fff;
-            background: #c8d0db4c;
-        }
+        // &:hover {
+        //     color: var(--color-text-primary);
+        //     background: #c8d0db4c;
+        // }
+    }
+}
+
+@media screen and (max-width:1600px) {
+    .about-me__main-screen__description {
+        grid-column: 1/7;
+    }
+}
+
+@media screen and (max-width:1220px) {
+    .about-me__main-screen__description {
+        grid-column: 1/8;
+        padding-top: .5rem;
     }
 }
 
 @media screen and (max-width:767px) {
-    
+
     .about-me__main-screen {
-        gap: 1rem;
         margin-top: 3rem;
     }
-    .about-me__main-screen__title {
-        grid-row: 2/3;
-    }
 
+    .about-me__main-screen__title {
+        grid-row: 1/2;
+    }
     .about-me__main-screen__image {
-        grid-column: 1/7;
+        padding-left: 0;
+        grid-column: 1/13;
         grid-row: 2/3;
         grid-row: 1/2;
+        grid-row: 3/4;
     }
 
     .about-me__main-screen__description {
         grid-column: 1/13;
         grid-row: 3/4;
+        grid-row: 2/3;
+        padding-bottom: 2rem;
     }
 
 }
