--- a/blocks/section__about-me-main/_index.scss
+++ b/blocks/section__about-me-main/_index.scss
@@ -1,6 +1,6 @@
 .about-me__main-screen {
     padding: 2.5rem var(--padding);
-    // border-top: 1px solid var(--color-gray-dark);
+    border-top: 1px solid var(--color-gray-dark);
     margin-top: 10rem;
     gap: 0
 }
