--- a/blocks/section__welcome-block/_index.scss
+++ b/blocks/section__welcome-block/_index.scss
@@ -1,11 +1,16 @@
 .section__welcome-block {
     height: fit-content;
-    min-height: 70vh;
-    min-height: 85vh;
-    padding: 9rem var(--padding);
+    min-height: 100vh;
+    padding: 8rem var(--padding) 2rem;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: flex-end;
+    margin: 0;
+
     display: flex;
     flex-direction: column;
-    // justify-content: flex-end;
+    justify-content: space-between;
+    gap: 2rem;
 }
 
 .welcome-block__text {
@@ -19,26 +24,29 @@
     }
 }
 
-
-
-.welcome-block__content {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.welcome-block__caption {
+    color: var(--color-text-gray);
+    font-size: var(--font-size-2);
+    line-height: 110%;
+    font-weight: var(--font-weight-regular);
+    font-weight: 400;
 }
+
+
+
+
 
 
 @media screen and (max-width: 767px) {
     .section__welcome-block {
-        min-height: 65vh;
-        padding: 7rem var(--padding);
+        min-height: calc(100vh - 54px);
+        // padding: 7rem var(--padding);
     }
 
-    .welcome-block__content {
-        grid-column: 1 / 13;
-    }
 
     .welcome-block__text {
+        padding-right: 1.5rem;
+
         * {
             font-size: var(--font-size-3);
             line-height: 110%;
@@ -47,7 +55,8 @@
         }
     }
 
-    .welcome-block__text {
+    .welcome-block__caption {
+        font-size: var(--font-size-1);
         padding-right: 1.5rem;
     }
 
