--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -20,9 +20,6 @@
     justify-content: space-between;
     height: 100%;
     overflow-y: auto;
-
-    // background-color: rgb(0 0 0 / 58%);
-    // backdrop-filter: blur(var(--backdrop-filter-card));
 }
 
 .header__top {
@@ -181,8 +178,8 @@
     }
 
     a {
-        font-size: var(--font-size-2);
-        font-weight: 500;
+        font-size: var(--font-size-1);
+        font-weight: 400;
         text-decoration: none;
     }
 }
@@ -379,7 +376,7 @@
         padding: 1rem var(--padding);
         height: 54px;
         position: fixed;
-        border-bottom: 0;
+        // border-bottom: 0;
         background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, var(--color-primary) 100%);
     }
 
