--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -1,6 +1,6 @@
 .experience-block {
     padding: var(--padding);
-    border-top: 1px solid (var(--color-gray-dark));
+    // border-top: 1px solid (var(--color-gray-dark));
 }
 
 .experience-block__title {
