--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -4,7 +4,7 @@
     position: relative;
     z-index: 1;
     // border-top: 1px solid var(--color-gray-dark);
-    margin-top: 5rem;
+    margin-top: 7rem;
 
     .post-card__big {
         &:not(:first-child) {
@@ -21,7 +21,7 @@
 .section__post-list__big {
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    gap: 7rem;
 }
 
 .section__post-list__big__heading {
@@ -38,7 +38,7 @@
 
 @media screen and (max-width: 1220px) {
     .section__post-list__big {
-        gap: 2rem;
+        gap: 5rem;
     }
 
     .section__post-list__big__wrapper {
@@ -58,4 +58,9 @@
 
 }
 
-@media screen and (max-width: 767px) {}
+@media screen and (max-width: 767px) {
+    .section__post-list__big {
+        gap: 4rem;
+    }
+
+}
