--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -8,8 +8,11 @@
     left: 0;
     top: 0;
     height: 100vh;
+    height: fit-content;
     // padding-right: var(--padding);
     z-index: 90;
+
+    position: fixed;
 }
 
 .header {
@@ -18,7 +21,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    // height: 100%;
     overflow-y: auto;
 }
 
@@ -35,6 +38,8 @@
     // background-color: var(--color-primary);
     width: 100%;
     z-index: 90;
+    background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, #0000009e 160%);
+
 }
 
 .header__top__logo {
@@ -65,6 +70,9 @@
 
     box-shadow: 0px 15px 30px 0px #000000b3;
     overflow-y: auto;
+
+    padding-top: 4.5rem;
+
     &._open {
         transform: translateY(0%);
 
@@ -163,6 +171,9 @@
 
 .header__navigation {
     padding: 1.5rem var(--padding);
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 .header__navigation__links {
@@ -181,6 +192,11 @@
         font-size: var(--font-size-1);
         font-weight: 400;
         text-decoration: none;
+        color: var(--color-text-gray);
+
+        &.active {
+            color: var(--color-text-primary);
+        }
     }
 }
 
@@ -298,6 +314,8 @@
 .header__bottom {
     display: flex;
     flex-direction: column;
+
+    display: none;
 }
 
 .header__bottom__links {
@@ -320,11 +338,6 @@
         width: fit-content;
     }
 }
-
-// .header__bottom__links__item {
-
-//     .header__bottom__links__item__link {}
-// }
 
 .header__bottom__year {
     padding: 1.5rem 1rem;
@@ -377,7 +390,6 @@
         height: 54px;
         position: fixed;
         // border-bottom: 0;
-        background: linear-gradient(360deg, rgba(0, 0, 0, 0) 0%, var(--color-primary) 100%);
     }
 
     .header__burger__menu {
