--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -55,13 +55,19 @@
 
 .post-card__big__heading {
     font-weight: 400;
-    font-size: var(--font-size-2);
-    line-height: var(--font-size-2);
+    font-size: var(--font-size-1);
+    line-height: var(--font-size-1);
+    z-index: 10;
+
+    &._mobile {
+        padding: var(--padding);
+    }
 }
 
 .post-card__big__short-description {
     * {
         color: #999;
+        color: var(--color-text-primary);
     }
 }
 
@@ -82,21 +88,14 @@
     border-top: 1px solid var(--color-gray-dark);
     padding: 13px 0px;
     width: 100%;
+
+    * {
+        font-size: var(--font-size-0);
+    }
 }
 
 .post-card__big__meta__item__variable {
     color: var(--color-secondary);
-    font-size: var(--font-size--1);
-}
-
-.post-card__big__meta__item__value {
-    a {
-        font-size: var(--font-size--1);
-
-
-    }
-
-    font-size: var(--font-size--1);
 }
 
 .post-card__meta__team {
@@ -151,18 +150,21 @@
 }
 
 .post-card__meta__team__name {
-    font-size: var(--font-size--1);
+    font-size: var(--font-size-0);
     color: var(--color-secondary);
 
-    a {
-        font-size: var(--font-size--1);
+    * {
+        font-size: var(--font-size-0);
         color: var(--color-secondary);
+    }
 
+    a {
         &:hover {
             color: var(--color-link-hover);
         }
     }
 }
+
 
 .post-card__big__content__bottom {
     width: 100%;
@@ -185,7 +187,7 @@
     overflow: visible;
     width: 100%;
     height: 100%;
-    padding-left: var(--padding);
+    padding: 0 var(--padding);
     top: 50%;
     bottom: 50%;
     right: 50%;
@@ -207,6 +209,7 @@
 
 .post-card__big__gallery {
     padding: 0 0 0 var(--padding);
+    padding: 0 var(--padding);
 
     position: relative;
     width: 100%;
@@ -215,7 +218,7 @@
     z-index: 5;
 
     .f-carousel {
-        // border-radius: 1rem;
+        border-radius: 1rem;
         overflow: hidden;
     }
 
