--- a/blocks/values/_index.scss
+++ b/blocks/values/_index.scss
@@ -1,15 +1,16 @@
 .values {
     padding: 10rem var(--padding);
+    margin-bottom: 0;
 }
 
 .values__title {
-    grid-column: 3/8;
+    grid-column: 1/9;
     grid-row: 1/2;
 }
 
 .values__title,
 .values__title * {
-    font-size: var(--font-size-5);
+    font-size: var(--font-size-3);
     line-height: 110%;
     font-weight: var(--font-weight-regular);
     font-weight: 400;
@@ -28,10 +29,6 @@
     grid-row: 2/3;
 
     margin-top: 5rem;
-}
-.values__description_second{
-    grid-column: 3 / 8;
-    grid-row: 3/ 4;
 }
 @media screen and (max-width: 767px) {
 
