--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -1,10 +1,12 @@
 .experience-block {
     padding: var(--padding);
     // border-top: 1px solid (var(--color-gray-dark));
+    margin-top: 0;
+
 }
 
-.experience-block__title {
-    grid-column: 1/5;
+.experience-block__description {
+    grid-column: 3/8;
     grid-row: 1/2;
 }
 
@@ -13,7 +15,8 @@
     flex-direction: column;
     gap: 7rem;
     grid-column: 3/8;
-    grid-row: 1/2;
+    grid-row: 2/3;
+    margin-top: 5rem;
 }
 
 .experience-item {
@@ -40,14 +43,15 @@
 
 
 .experience-item__company {
-    font-size: var(--font-size-2);
+    font-size: var(--font-size-1);
     font-weight: var(--font-weight-regular);
-    margin-top: .3rem;
+    margin-top: .5rem;
 }
 
 .experience-item__position {
-    font-size: var(--font-size-3);
+    font-size: var(--font-size-1);
     font-weight: var(--font-weight-regular);
+    margin-top: .3rem;
     // margin-top: .7rem;
 }
 
@@ -74,26 +78,27 @@
 }
 
 @media screen and (max-width: 1600px) {
-    .experience-block__title {
-        grid-column: 1/5;
-        grid-row: 1/2;
-    }
-    
-    .experience-list {
-        grid-column: 4/9;
-        grid-row: 1/2;
-    }
+    // .experience-block__title {
+    //     grid-column: 1/5;
+    //     grid-row: 1/2;
+    // }
+
+    // .experience-list {
+    //     grid-column: 4/9;
+    //     grid-row: 1/2;
+    // }
 }
 
 @media screen and (max-width: 1220px) {
-    .experience-block__title {
-        grid-column: 1/13;
-    }
-    .experience-list {
-        grid-column: 1/13;
-        grid-row: 2/3;
-        gap: 6rem;
-    }
+    // .experience-block__title {
+    //     grid-column: 1/13;
+    // }
+
+    // .experience-list {
+    //     grid-column: 1/13;
+    //     grid-row: 2/3;
+    //     gap: 6rem;
+    // }
 
     .experience-item {
         flex-direction: column;
