--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -1,12 +1,13 @@
 .experience-block {
-    padding: var(--padding);
+    padding-top: var(--padding);
+    padding-bottom: var(--padding);
     // border-top: 1px solid (var(--color-gray-dark));
     margin-top: 0;
 
 }
 
 .experience-block__description {
-    grid-column: 3/8;
+    grid-column: 4/8;
     grid-row: 1/2;
 }
 
@@ -14,7 +15,7 @@
     display: flex;
     flex-direction: column;
     gap: 7rem;
-    grid-column: 3/8;
+    grid-column: 4/8;
     grid-row: 2/3;
     margin-top: 5rem;
 }
@@ -73,32 +74,27 @@
     font-weight: var(--font-weight-regular);
     color: var(--color-text-gray);
     margin-top: .5rem;
-
     // width: 50%;
 }
 
 @media screen and (max-width: 1600px) {
+    .experience-block__description {
+        grid-column: 3/8;
+    }
 
-    // .experience-list {
-    //     grid-column: 4/9;
-    //     grid-row: 1/2;
-    // }
+    .experience-list {
+        grid-column: 3/8;
+    }
 }
 
 @media screen and (max-width: 1220px) {
     .experience-block__description {
-        grid-column: 1/8;
+        grid-column: 2/8;
     }
 
     .experience-list {
-        grid-column: 1/8;
+        grid-column: 2/8;
     }
-
-    .experience-item {
-        // flex-direction: column;
-        // gap: 1rem;
-    }
-
 }
 
 @media screen and (max-width: 767px) {
@@ -116,9 +112,11 @@
         // flex-direction: column;
         gap: 1rem;
     }
-    .experience-item__company{
+
+    .experience-item__company {
         margin-top: 0;
     }
+
     .experience-item__img {
         width: 3.5rem;
         height: 3.5rem;
