--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -4,7 +4,7 @@
     position: relative;
     z-index: 1;
     // border-top: 1px solid var(--color-gray-dark);
-    margin-top: 7rem;
+    margin-top: 5rem;
 
     .post-card__big {
         &:not(:first-child) {
@@ -22,6 +22,9 @@
     display: flex;
     flex-direction: column;
     gap: 7rem;
+
+    grid-column: 4/13;
+    grid-row: 2/3;
 }
 
 .section__post-list__big__heading {
@@ -33,16 +36,24 @@
     justify-content: space-between;
     z-index: 10;
     display: none;
+    grid-column: 4/12;
+    grid-row: 1/2;
+}
 
+@media screen and (max-width: 1600px) {
+    .section__post-list__big {
+        grid-column: 3/13;
+    }
 }
 
 @media screen and (max-width: 1220px) {
     .section__post-list__big {
+        grid-column: 2/13;
         gap: 5rem;
     }
 
     .section__post-list__big__wrapper {
-        
+
         .post-card__big {
             border-bottom: 0;
 
@@ -60,7 +71,13 @@
 }
 
 @media screen and (max-width: 767px) {
+.section__post-list__big__wrapper {
+    padding: 0;
+    margin-top: 3rem;
+
+}
     .section__post-list__big {
+        grid-column: 1/13;
         gap: 4rem;
     }
 
