--- a/blocks/section__welcome-block/_index.scss
+++ b/blocks/section__welcome-block/_index.scss
@@ -1,18 +1,19 @@
 .section__welcome-block {
     height: fit-content;
     min-height: 100vh;
-    padding: 8rem var(--padding) 2rem;
-    padding: 0 var(--padding) var(--padding);
-    // display: flex;
-    // flex-direction: column;
-    // justify-content: flex-end;
     margin: 0;
+}
 
+.section__welcome-block__content {
+    grid-column: 4/12;
+    height: fit-content;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    justify-content: center;
     gap: 2rem;
+    justify-content: center;
+    align-items: start;
+    height: 100%;
 }
 
 .welcome-block__text {
@@ -36,15 +37,28 @@
 
 
 
+@media screen and (max-width: 1600px) {
+    .section__welcome-block__content {
+        grid-column: 3/12;
+    }
+}
+@media screen and (max-width: 1220px) {
+    .section__welcome-block__content {
+        grid-column: 2/12;
+    }
+}
 @media screen and (max-width: 767px) {
     .section__welcome-block {
         min-height: calc(100vh - 54px);
-        padding: 8rem var(--padding) 2rem;
+        padding: 8rem var(--padding) 0;
         // padding: 7rem var(--padding);
-        justify-content: space-between;
+        // justify-content: space-between;
+    }
+    
+    .section__welcome-block__content {
+        grid-column: 1/12;
         justify-content: flex-start;
     }
-
 
     .welcome-block__text {
         padding-right: 1.5rem;
