--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -1,12 +1,7 @@
 .footer {
+    padding-top: calc(6 * (var(--padding)));
+    padding-bottom: var(--padding);
 
-    grid-column: 3/13;
-    // overflow-x: hidden;
-    // border-top: 1px solid var(--color-gray-dark);
-    padding: calc(2 * (var(--padding))) var(--padding);
-
-    display: flex;
-    flex-direction: column;
     transition-property: all;
     transition-duration: .5s;
     position: relative;
@@ -16,35 +11,101 @@
         filter: blur(5px);
         opacity: .7;
         touch-action: none;
-
     }
 
-    .header__bottom {
-        display: none;
+
+}
+
+.footer__bottom {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__bottom__links {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem 1.5rem;
+    // border-top: 1px solid var(--color-gray-dark);
+    padding: 1.5rem 1rem;
+    padding: 1.5rem var(--padding);
+
+    li {
+        list-style: none;
     }
+
+    a {
+
+        text-decoration: none;
+
+        width: fit-content;
+    }
+}
+
+.footer__bottom__year {
+    color: var(--color-secondary);
+    font-size: var(--font-size--1);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 5px;
+    // border-top: 1px solid var(--color-gray-dark);
+}
+
+.footer__content {
+    grid-column: 4/13;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 3rem;
+    position: relative;
+
+    &::after {
+        content: '';
+        position: absolute;
+        display: inline-block;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 80%;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+        z-index: 10;
+    }
+}
+
+.footer__links__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    z-index: 15;
 }
 
 .footer__links {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px 20px;
-    padding: var(--padding);
+    flex-direction: column;
+    gap: 1rem;
+    grid-row: 1/2;
+    width: fit-content;
+    ;
 
     li {
         list-style: none;
-
     }
 
+    * {
+        font-size: var(--font-size-1);
+    }
+
+    &:nth-child(2) {
+        align-items: flex-end;
+    }
 }
-
-// .footer__links___item {
-
-//     .footer__links___item__link {}
-// }
 
 .footer__decor {
     width: 100%;
+    grid-row: 2/3;
+    z-index: 5;
 
     svg {
         width: 100%;
@@ -53,29 +114,30 @@
     }
 }
 
+
+
 @media screen and (max-width: 1600px) {
-    .footer {
-        grid-column: 4/13;
+
+    .footer__content {
+        grid-column: 3/13;
     }
 }
 
 @media screen and (max-width: 1220px) {
-    .footer {
-        grid-column: 5/13;
-        padding: 0;
+
+
+    .footer__content {
+        grid-column: 2/13;
     }
 }
 
 @media screen and (max-width: 767px) {
-    .footer__decor {
-        padding: calc(1.5 * (var(--padding))) var(--padding);
+    .footer{
+        padding-top: 0;
     }
 
-    .footer {
-        grid-column: 5/13;
-        .header__bottom {
-            display: flex;
-            // border-bottom: 1px solid var(--color-gray-dark);
-        }
+    .footer__content {
+        // grid-row: 3/4;
+        grid-column: 1/13;
     }
 }
