--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -12,7 +12,6 @@
 
     // border-top: 1px solid var(--color-gray-dark);
     overflow: visible;
-    padding-right: var(--padding);
 }
 
 
@@ -187,7 +186,7 @@
     overflow: visible;
     width: 100%;
     height: 100%;
-    padding: 0 var(--padding);
+    padding: 0 var(--padding) 0 0 ;
     top: 50%;
     bottom: 50%;
     right: 50%;
@@ -210,6 +209,7 @@
 .post-card__big__gallery {
     padding: 0 0 0 var(--padding);
     padding: 0 var(--padding);
+    padding: 0 var(--padding) 0 0 ;
 
     position: relative;
     width: 100%;
@@ -294,7 +294,7 @@
         position: relative;
         // gap: 1rem;
         gap: 0;
-        padding: 0 var(--padding);
+        // padding: 0 var(--padding);
 
         .f-carousel__dots {
             left: 0 !important;
