--- a/blocks/section__welcome-block/_index.scss
+++ b/blocks/section__welcome-block/_index.scss
@@ -27,7 +27,8 @@
     }
 }
 
-.welcome-block__caption {
+.welcome-block__caption,
+.welcome-block__caption * {
     color: var(--color-text-gray);
     font-size: var(--font-size-2);
     line-height: 110%;
@@ -42,11 +43,13 @@
         grid-column: 3/12;
     }
 }
+
 @media screen and (max-width: 1220px) {
     .section__welcome-block__content {
         grid-column: 2/12;
     }
 }
+
 @media screen and (max-width: 767px) {
     .section__welcome-block {
         min-height: calc(100vh - 54px);
@@ -54,7 +57,7 @@
         // padding: 7rem var(--padding);
         // justify-content: space-between;
     }
-    
+
     .section__welcome-block__content {
         grid-column: 1/12;
         justify-content: flex-start;
@@ -71,7 +74,8 @@
         }
     }
 
-    .welcome-block__caption {
+    .welcome-block__caption,
+    .welcome-block__caption * {
         font-size: var(--font-size-1);
         padding-right: 1.5rem;
     }
