--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -348,7 +348,7 @@ footer {
     justify-content: center;
     flex-direction: row;
 
-    border-radius: 0.6rem;
+    // border-radius: 0.6rem;
     padding: 1rem 1.5rem;
     background: var(--color-background-card);
     background: #ffffff1a;
