--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -2,7 +2,7 @@
     padding-top: var(--padding);
     padding-bottom: var(--padding);
     // border-top: 1px solid (var(--color-gray-dark));
-    margin-top: 0;
+    margin-top: 5rem;
 
 }
 
@@ -17,20 +17,25 @@
     gap: 7rem;
     grid-column: 4/8;
     grid-row: 2/3;
-    margin-top: 5rem;
+    margin-top: 2rem;
 }
 
 .experience-item {
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 1.5rem;
 }
 
 .experience-item__top {
     display: flex;
-    flex-direction: row;
-    gap: 1.5rem;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.experience-item__top__title {
+    display: flex;
+    flex-direction: column;
 }
 
 .experience-item__img {
@@ -39,6 +44,10 @@
     width: 4rem;
     height: 4rem;
     background-color: aliceblue;
+
+    // position: absolute;
+    // left: -5rem;
+    // top: .5rem;
 }
 
 
@@ -66,7 +75,6 @@
 .experience-item__year {
     font-size: var(--font-size-0);
     font-weight: var(--font-weight-regular);
-    margin-top: 1.5rem;
 }
 
 .experience-item__description {
@@ -109,7 +117,7 @@
     }
 
     .experience-item {
-        // flex-direction: column;
+        flex-direction: column;
         gap: 1rem;
     }
 
@@ -117,8 +125,17 @@
         margin-top: 0;
     }
 
+    .experience-item__year {
+    }
+
     .experience-item__img {
         width: 3.5rem;
         height: 3.5rem;
+        top: 0rem;
+        left: -4.5rem;
+
+        top: 0rem;
+        left: 0;
+        position: relative;
     }
 }
