--- a/components/post-card/post-card.scss
+++ b/components/post-card/post-card.scss
@@ -11,12 +11,13 @@
     position: relative;
     width: 100%;
     height: 100%;
-
+    
     .post-card__thumb__source {
         object-fit: cover;
         width: 100%;
         height: auto;
         aspect-ratio: 4/3;
+        border-radius: .5rem;
     }
 }
 
@@ -26,8 +27,9 @@
     gap: 5px;
     margin-top: 10px;
 }
-.post-card__category{
-    a{
+
+.post-card__category {
+    a {
         color: var(--color-secondary);
         text-decoration: none;
         font-size: var(--font-size--1);
